[package]
name = "ptool"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "string"] }
clap_lex = "1.1.0"
indoc = "2.0.7"
inquire = "0.9.4"
jiff = "0.2.23"
mlua = { version = "0.11.2", features = ["lua54", "vendored"] }
owo-colors = "4.3.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
semver = "1.0.27"
serde_json = "1.0.149"
shlex = "1.3.0"
toml = "1.0.7"
toml_edit = "0.25.5"
