[package]
name = "ptool-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ptool"
path = "src/main.rs"

[dependencies]
clap_lex = "1.1.0"
indoc = "2.0.7"
ptool-lua = { path = "../ptool-lua" }
shadow-rs = { version = "2.0.0", default-features = false }

[build-dependencies]
shadow-rs = "2.0.0"
