[package]
name = "ptool-engine"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.6.0", features = ["string"] }
glob = "0.3.3"
jiff = "0.2.24"
md5 = "0.8.0"
minijinja = { version = "2.18.0", features = ["json", "urlencode"] }
owo-colors = "4.3.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
semver = "1.0.27"
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.11.0"
shlex = "1.3.0"
sqlx = { version = "0.8.6", features = ["any", "sqlite", "postgres", "mysql", "runtime-tokio-rustls"] }
tar = "0.4.45"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time", "net"] }
toml = "1.0.7"
toml_edit = "0.25.5"
url = "2.5.8"
