[package]
name = "ptool-engine"
version.workspace = true
edition.workspace = true

[dependencies]
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["string"] }
crossterm = "0.29.0"
flate2 = "1.1.9"
git2 = { version = "0.20.4", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
glob = "0.3.3"
inquire = "0.9.4"
jiff = "0.2.24"
md5 = "0.8.0"
minijinja = { version = "2.18.0", features = ["json", "urlencode"] }
owo-colors = "4.3.0"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
semver = "1.0.27"
serde_json = "1.0.149"
serde_norway = "0.9.42"
sha1 = "0.11.0"
sha2 = "0.11.0"
shlex = "1.3.0"
sqlx = { version = "0.8.6", features = ["any", "sqlite", "postgres", "mysql", "runtime-tokio-rustls"] }
sysinfo = "0.38.4"
tar = "0.4.45"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time", "net"] }
toml = "1.0.7"
toml_edit = "0.25.5"
url = "2.5.8"
xz2 = "0.1.7"
zstd = "0.13.3"
