[package]
name = "ptool-engine"
version.workspace = true
edition.workspace = true

[dependencies]
adler2 = "2.0.1"
blake2 = "0.10.6"
blake3 = "1.8.5"
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["string"] }
crc = "3.4.0"
crossterm = "0.29.0"
flate2 = "1.1.9"
git2 = { version = "0.20.4", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
glob = "0.3.3"
inquire = "0.9.4"
jiff = "0.2.24"
md5 = "0.8.0"
minijinja = { version = "2.18.0", features = ["json", "urlencode"] }
murmur3 = "0.5.2"
opendal = { version = "0.56.0", features = ["services-s3"] }
owo-colors = "4.3.0"
ptool-console = { version = "0.9.1", path = "../ptool-console" }
ratatui = "0.30.0"
redis = { version = "1.2.1", features = ["tokio-comp"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
semver = "1.0.27"
serde_json = "1.0.149"
serde_norway = "0.9.42"
sha1 = "0.11.0"
sha2 = "0.11.0"
sha3 = "0.12.0"
shlex = "1.3.0"
sqlx = { version = "0.8.6", features = ["any", "sqlite", "postgres", "mysql", "runtime-tokio-rustls"] }
sysinfo = "0.38.4"
tar = "0.4.45"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time", "net"] }
toml = "1.0.7"
toml_edit = "0.25.5"
url = "2.5.8"
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64", "xxh3"] }
xz2 = "0.1.7"
zstd = "0.13.3"

[target.'cfg(all(target_arch = "x86", target_os = "linux", target_env = "musl"))'.dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }
