[package]
name = "ptool-lua"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.6.0", features = ["derive", "string"] }
clap_lex = "1.1.0"
indoc = "2.0.7"
inquire = "0.9.4"
jiff = "0.2.23"
minijinja = { version = "2.18.0", features = ["json", "urlencode"]}
mlua = { version = "0.11.2", features = ["lua54", "serde", "vendored"] }
owo-colors = "4.3.0"
ptool-engine = { path = "../ptool-engine" }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
semver = "1.0.27"
serde_json = "1.0.149"
shlex = "1.3.0"
toml = "1.0.7"
toml_edit = "0.25.5"
