[package]
name = "ptool-lua"
version.workspace = true
edition.workspace = true

[dependencies]
inquire = "0.9.4"
jiff = "0.2.23"
mlua = { version = "0.11.2", features = ["lua54", "serde", "vendored"] }
owo-colors = "4.3.0"
ptool-engine = { path = "../ptool-engine" }
rustyline = "18.0.0"
serde_json = "1.0.149"
shlex = "1.3.0"
